--- a/doc/GEMINI.tex
+++ b/doc/GEMINI.tex
@@ -591,7 +591,7 @@ The $r,\theta,\phi$ coordinates of a point in space, are spherical coordinates m
 \hat{\mathbf{e}}_\theta &=& \cos \theta \cos \phi ~ \hat{\mathbf{e}}_x + \cos \theta \sin \phi ~ \hat{\mathbf{e}}_y - \sin \theta ~ \hat{\mathbf{e}}_z \\
 \hat{\mathbf{e}}_\phi &=& -\sin \phi ~ \hat{\mathbf{e}}_x + \cos \phi ~ \hat{\mathbf{e}}_y \\
 \hat{\mathbf{e}}_q &\equiv& \frac{\frac{d \mathbf{x}}{d q}}{\left| \frac{d \mathbf{x}}{d q} \right|} \nonumber \\
- &=& \frac{-3 r^3 \cos \theta \sin \theta }{R_e^2 \sqrt{1+3 \cos^2 \theta } } \cos \phi ~ \hat{\mathbf{e}}_x + \frac{-3 r^3 \cos \theta \sin \theta }{R_e^2 \sqrt{1+3 \cos^2 \theta } } \sin \phi ~ \hat{\mathbf{e}}_y + \frac{-2 \cos^2 \theta + \sin^2 \theta }{R_e^2 \sqrt{1+3 \cos^2 \theta } } r^3 ~ \hat{\mathbf{e}}_z \\
+ &=& \frac{-3 \cos \theta \sin \theta }{\sqrt{1+3 \cos^2 \theta } } \cos \phi ~ \hat{\mathbf{e}}_x + \frac{-3 \cos \theta \sin \theta }{\sqrt{1+3 \cos^2 \theta } } \sin \phi ~ \hat{\mathbf{e}}_y + \frac{-2 \cos^2 \theta + \sin^2 \theta }{\sqrt{1+3 \cos^2 \theta } } ~ \hat{\mathbf{e}}_z \\
 \hat{\mathbf{e}}_p &=& \hat{\mathbf{e}}_\phi \times \hat{\mathbf{e}}_q
 \end{eqnarray}
 
