added more doc details about how to derive curvilinear coordinate info

--- a/doc/GEMINI.tex
+++ b/doc/GEMINI.tex
@@ -564,9 +564,14 @@ where $\mathbf{R} \equiv \mathbf{x}-\mathbf{x'} = \sum_i R_i \hat{\mathbf{e}}_i$
 
 \section{Dipole coordinates}
 
-The most commonly used coordinate system for GEMINI is a dipole coordinate system \citep{Huba:2000}.  The definitions for dipole coordinates used in GEMINI are:  
+The most commonly used \emph{curvilinear} coordinate system for GEMINI is a dipole coordinate system \citep{Huba:2000}.  For purposes of illustrating how one might set up an arbitrary orthogonal curvilinear system for GEMINI we present and end-to-end derivation of the dipole metric and associated basis vectors here.  A similar procedure may be used to fully characterize any other curvilinear system that is orthogonal.  
+
+
+\subsection{Derivation of metric for dipole coordinates}
+
+The definitions for dipole coordinates used in GEMINI are (switching to superscripts to denote contravariant vs. covariant):  
 \begin{equation}
-x_1 = q; \quad x_2 = p; \quad x_3 = \phi
+x^1 = q; \quad x^2 = p; \quad x^3 = \phi
 \end{equation}
 with the $q,p,\phi$ coordinates defined as in \citet{Huba:2000}, and $\phi$ being the same coordinate as used in a spherical system.  In terms of spherical coordinates (measured from the center of Earth's tilted dipole) and Cartesian coordinates:  
 \begin{eqnarray}
@@ -581,47 +586,157 @@ q^2 \left( \frac{r}{R_e}\right)^4 + \frac{1}{p} \left( \frac{r}{R_e}\right)  &=&
 \end{eqnarray}
 From these transformations, the basis vectors and metric for dipole coordinates can be derived.  The contravariant basis vectors are defined in terms of contravariant differentials $d x^i$ as:
 \begin{equation}
-\boldsymbol{\varepsilon}^i = \frac{\partial x^i}{\partial x} \hat{\mathbf{e}}_x + \frac{\partial x^i}{\partial y} \hat{\mathbf{e}}_y + \frac{\partial x^i}{\partial z} \hat{\mathbf{e}}_z
+\boldsymbol{\varepsilon}^i = \frac{\partial x^i}{\partial x} \hat{\mathbf{e}}_x + \frac{\partial x^i}{\partial y} \hat{\mathbf{e}}_y + \frac{\partial x^i}{\partial z} \hat{\mathbf{e}}_z \label{eqn:conbasis}
 \end{equation}
-The necessary derivative for these calculations may be computed from the dipole coordinates as functions of the cartesian coordinates $x,y,z$ and are given by:  
+The covariant basis vectors (not used immediately) are defined by:
+\begin{equation}
+\boldsymbol{\varepsilon}_i = \frac{\partial x}{\partial x^i} \hat{\mathbf{e}}_x + \frac{\partial y}{\partial x^i} \hat{\mathbf{e}}_y + \frac{\partial z}{\partial x^i} \hat{\mathbf{e}}_z \label{eqn:conbasis}
+\end{equation}
+The necessary derivative for computing the contravariant basis be computed from the dipole coordinates as functions of the cartesian coordinates $x,y,z$ (listed above) and are given by:  
 \begin{eqnarray}
-\frac{\partial x^1}{\partial x} &=& \frac{\partial q}{\partial x} = \\
-\frac{\partial x^1}{\partial y} &=& \frac{\partial q}{\partial y} = \\
-\frac{\partial x^1}{\partial z} &=& \frac{\partial q}{\partial z} = \\
-\frac{\partial x^2}{\partial x} &=& \frac{\partial p}{\partial x} = \\
-\frac{\partial x^2}{\partial y} &=& \frac{\partial p}{\partial y} = \\
-\frac{\partial x^2}{\partial z} &=& \frac{\partial p}{\partial z} = \\
-\frac{\partial x^3}{\partial x} &=& \frac{\partial \phi}{\partial x} = \\
-\frac{\partial x^3}{\partial y} &=& \frac{\partial \phi}{\partial y} = \\
-\frac{\partial x^3}{\partial z} &=& \frac{\partial \phi}{\partial z} = \\
+\frac{\partial x^1}{\partial x} &=& \frac{\partial q}{\partial x} = \frac{-3 R_e \sin \theta \cos \theta \cos \phi}{r^3} \\
+\frac{\partial x^1}{\partial y} &=& \frac{\partial q}{\partial y} = \frac{-3 R_e \sin \theta \cos \theta \sin \phi}{r^3} \\
+\frac{\partial x^1}{\partial z} &=& \frac{\partial q}{\partial z} = \frac{R_e^2 \left( 1 - 3 \cos^2 \theta \right)}{r^3} \\
+\frac{\partial x^2}{\partial x} &=& \frac{\partial p}{\partial x} = \frac{\cos \phi}{ R_e \sin^3 \theta} \left( 1 - 3 \cos^2 \theta \right) \\
+\frac{\partial x^2}{\partial y} &=& \frac{\partial p}{\partial y} = \frac{\sin \phi}{ R_e \sin^3 \theta} \left( 1 - 3 \cos^2 \theta \right) \\
+\frac{\partial x^2}{\partial z} &=& \frac{\partial p}{\partial z} = \frac{3 \cos \theta}{R_e \sin^2 \theta}\\
+\frac{\partial x^3}{\partial x} &=& \frac{\partial \phi}{\partial x} = \frac{- \sin \phi}{r \sin \theta} \\
+\frac{\partial x^3}{\partial y} &=& \frac{\partial \phi}{\partial y} = \frac{\cos \phi}{r \sin \theta} \\
+\frac{\partial x^3}{\partial z} &=& \frac{\partial \phi}{\partial z} = 0
+\end{eqnarray}
+The contravariant basis vectors are, therefore, from Equation \ref{eqn:conbasis}:
+\begin{eqnarray}
+\boldsymbol{\varepsilon}^1 &=& \frac{-3 R_e \sin \theta \cos \theta \cos \phi}{r^3} \hat{\mathbf{e}}_x + \frac{-3 R_e \sin \theta \cos \theta \sin \phi}{r^3} \hat{\mathbf{e}}_y + \frac{R_e^2 \left( 1 - 3 \cos^2 \theta \right)}{r^3} \hat{\mathbf{e}}_z \\
+\boldsymbol{\varepsilon}^2 &=& \frac{\cos \phi}{ R_e \sin^3 \theta} \left( 1 - 3 \cos^2 \theta \right) \hat{\mathbf{e}}_x +  \frac{\sin \phi}{ R_e \sin^3 \theta} \left( 1 - 3 \cos^2 \theta \right) \hat{\mathbf{e}}_y + \frac{3 \cos \theta}{R_e \sin^2 \theta} \hat{\mathbf{e}}_z \\
+\boldsymbol{\varepsilon}^3 &=& \frac{- \sin \phi}{r \sin \theta} \hat{\mathbf{e}}_x + \frac{\cos \phi}{r \sin \theta} \hat{\mathbf{e}}_y
 \end{eqnarray}
 
-The corresponding metric factors (needed for derivatives and intergrals) are given by \citep{Huba:2000}:  
+The metric tensors corresponding to our dipole curvilinear space are related to differential displacements in the new coordinate system.  Based on the definition of the covariant unit vectors a differential displacement in a curvilinear system is:
+\begin{equation}
+d \mathbf{r} = d x^i \boldsymbol{\varepsilon}_i = dx \hat{\mathbf{e}}_x + dy \hat{\mathbf{e}}_y + dz \hat{\mathbf{e}}_z \label{eqn:dr}
+\end{equation}
+Differential distance squared, is then:
+\begin{equation}
+dr^2 \equiv d \mathbf{r} \cdot d \mathbf{r} = \left(d x^i \boldsymbol{\varepsilon}_i \right) \cdot \left( d x^j \boldsymbol{\varepsilon}_j \right) = \left( \boldsymbol{\varepsilon}_i \cdot \boldsymbol{\varepsilon}_j \right) dx^i dx^j = g_{ij} dx^i dx^j,
+\end{equation}
+where
+\begin{equation}
+g_{ij} \equiv \boldsymbol{\varepsilon}_i \cdot \boldsymbol{\varepsilon}_j
+\end{equation}
+is defined as the covariant metric.  By analogy we can define a contravariant metric:
+\begin{equation}
+g^{ij} \equiv \boldsymbol{\varepsilon}^i \cdot \boldsymbol{\varepsilon}^j
+\end{equation}
+Note that, as a consequence of the chain rule applied to sequences of derivatives from the basis vectors, the following relations hold:
+\begin{equation}
+\boldsymbol{\varepsilon}_i \cdot \boldsymbol{\varepsilon}^j = \delta_i^j
+\end{equation}
+\begin{equation}
+g_{ik} g^{kj} = \delta_i^j
+\end{equation}
+From the latter expression we see that the covariant and contravariant metrics can be understood as matrix inverses of each other.  One may convert from covariant to contravariant bases by using these two metrics:
+\begin{equation}
+\boldsymbol{\varepsilon}_j = g_{ji} \boldsymbol{\varepsilon}^i
+\end{equation}
+\begin{equation}
+\boldsymbol{\varepsilon}^j = g^{ji} \boldsymbol{\varepsilon}_i
+\end{equation}
+Components of vectors may similarly be transformed through the metric:
+\begin{equation}
+A_j = g_{ji} A^i
+\end{equation}
+\begin{equation}
+A^j = g^{ji} A_i
+\end{equation}
+
+Because the dipole coordinate system is orthogonal, there are only three non-zero elements of the contravariant metric, $g^{ii}$ (no implied summation), and we have:
+\begin{eqnarray}
+g^{ij} \rightarrow \left[
+\begin{array}{ccc}
+\frac{R_e^4}{r^6} \left( 1 + 3 \cos \theta \right) & 0 & 0 \\ 
+0 & \frac{1}{R_e^2} \frac{\left( 1+3 \cos \theta \right)}{\sin^6 \theta} & 0 \\
+0 & 0 & \frac{1}{r^2 \sin^2 \theta}
+\end{array}
+\right] 
+\end{eqnarray}
+This is related to the covariant metric $g_{ij}$ via the relation:
+\begin{equation}
+g_{ik} g^{kj} = \delta_i^j
+\end{equation}
+Thus the covariant metric is the inverse of the contravariant metric:
+\begin{eqnarray}
+g_{ij} \rightarrow \left[
+\begin{array}{ccc}
+\frac{r^6}{R_e^4 \left( 1 + 3 \cos \theta \right)} & 0 & 0 \\ 
+0 & \frac{R_e ^2 \sin^6 \theta}{\left( 1+3 \cos \theta \right)} & 0 \\
+0 & 0 & r^2 \sin^2 \theta
+\end{array}
+\right] 
+\end{eqnarray}
+The metric factors, $h_i$, (needed for derivatives and intergrals) are defined by (no summation):
+\begin{equation}
+h_i \equiv \sqrt{g_{ii}}
+\end{equation}
+For the dipole system, applying this definition gives:  
 \begin{eqnarray}
 h_1 = h_q &=& \frac{r^3}{R_e^2} \frac{1}{\sqrt{1+3 \cos^2 \theta}} \\
 h_2 = h_p &=& \frac{R_e \sin^3 \theta}{\sqrt{1+3 \cos^2 \theta}} \\
 h_3 = h_\phi &=& r \sin \theta
 \end{eqnarray}
-The $r,\theta,\phi$ coordinates of a point in space, are spherical coordinates measured from the center of the Earth's tilted magnetic dipole.  Unit vectors used for grid-related calculations are given, in tilted dipole, Cartesian coordinates by:  
+
+Finally, dipole unit vectors may be derived by noting equivalence of various expressions for $d \mathbf{r}$:
+\begin{equation}
+dr^2 = g_{ij} dx^i dx^j = dx^2 + dy^2+ dz^2
+\end{equation}
+In orthogonal coordinates this simplifies to:
+\begin{equation}
+dr ^2 = g_{11} dx^1 dx^1 + g_{22} dx^2 dx^2 + g_{33} dx^3 dx^3 = \sum_i h_i^2 (dx_i)^2
+\end{equation}
+where in the last equality we have reverted to explicit summation and use of pure subscript indices.  It is notable in this equation that the elements of the summation $h_i^2 dx_i^2$ can be understood as differential distance (squared) in the $i^{th}$ direction.  Thus, we arrive at yet another expression for $d \mathbf{r}$:
+\begin{equation}
+d \mathbf{r} = \sum_i h_i dx^i \hat{\mathbf{e}}_i
+\end{equation}
+The $\hat{\mathbf{e}}_i$ vectors here are true unit vectors since the differentials accompanying them $h_i dx^i$ have units of true distance (units of meters).  Comparing with Equation \ref{eqn:dr}, we see that (no summation):
+\begin{equation}
+\hat{\mathbf{e}}_i = \frac{1}{h_i} \boldsymbol{\varepsilon}_i
+\end{equation}
+Alternatively we may write down the units vectors in terms of the contravariant basis (which could be easier to compute) (no sum over $i$ - only $j$):
+\begin{equation}
+\hat{\mathbf{e}}_i = \frac{g_{ij}}{h_i} \boldsymbol{\varepsilon}^j
+\end{equation}
+In an orthogonal system only the diagonal elements of the metric are present, so that the unit vectors become (no summation):
+\begin{equation}
+\hat{\mathbf{e}}_i = \frac{g_{ii}}{h_i} \boldsymbol{\varepsilon}^i = h_i \boldsymbol{\varepsilon}^i 
+\end{equation}
+Invoking this result with the above-derived contravariant basis vectors gives:
+\begin{eqnarray}
+\hat{\mathbf{e}}_1 &=& \frac{-3 \cos \theta \sin \theta \cos \phi}{\sqrt{1+3 \cos^2 \theta } } ~ \hat{\mathbf{e}}_x + \frac{-3 \cos \theta \sin \theta \sin \phi}{\sqrt{1+3 \cos^2 \theta } } ~ \hat{\mathbf{e}}_y + \frac{\left( 1 - 3 \cos^2 \theta \right) }{\sqrt{1+3 \cos^2 \theta } }~ \hat{\mathbf{e}}_z \\
+\hat{\mathbf{e}}_2 &=& \frac{\cos \phi \left(1 - 3 \cos^2 \theta \right)}{\sqrt{1 + 3 \cos^2 \theta}} ~ \hat{\mathbf{e}}_x + \frac{\sin \phi \left(1 - 3 \cos^2 \theta \right)}{\sqrt{1 + 3 \cos^2 \theta}}~ \hat{\mathbf{e}}_y + ~  \frac{\cos \theta \sin \theta}{\sqrt{1+3 \cos^2 \theta }} \hat{\mathbf{e}}_z \\
+\hat{\mathbf{e}}_3 &=& - \sin \phi ~ \hat{\mathbf{e}}_x + \cos \phi ~ \hat{\mathbf{e}}_y
+\end{eqnarray}
+
+\subsection{Tilted dipole approximations}
+
+The $r,\theta,\phi$ coordinates of a point in space, are understood to be spherical coordinates measured from the center of the Earth's tilted magnetic dipole.  Unit vectors used for grid-related calculations are given, in tilted dipole, Cartesian coordinates by:  
 \begin{eqnarray}
 \hat{\mathbf{e}}_r &=& \sin \theta \cos \phi ~ \hat{\mathbf{e}}_x + \sin \theta \sin \phi ~ \hat{\mathbf{e}}_y + \cos \theta ~ \hat{\mathbf{e}}_z \\
 \hat{\mathbf{e}}_\theta &=& \cos \theta \cos \phi ~ \hat{\mathbf{e}}_x + \cos \theta \sin \phi ~ \hat{\mathbf{e}}_y - \sin \theta ~ \hat{\mathbf{e}}_z \\
-\hat{\mathbf{e}}_\phi &=& -\sin \phi ~ \hat{\mathbf{e}}_x + \cos \phi ~ \hat{\mathbf{e}}_y \\
-\hat{\mathbf{e}}_q &\equiv& \frac{\frac{d \mathbf{x}}{d q}}{\left| \frac{d \mathbf{x}}{d q} \right|} \nonumber \\
- &=& \frac{-3 \cos \theta \sin \theta }{\sqrt{1+3 \cos^2 \theta } } \cos \phi ~ \hat{\mathbf{e}}_x + \frac{-3 \cos \theta \sin \theta }{\sqrt{1+3 \cos^2 \theta } } \sin \phi ~ \hat{\mathbf{e}}_y + \frac{-2 \cos^2 \theta + \sin^2 \theta }{\sqrt{1+3 \cos^2 \theta } } ~ \hat{\mathbf{e}}_z \\
-\hat{\mathbf{e}}_p &=& \hat{\mathbf{e}}_\phi \times \hat{\mathbf{e}}_q
+\hat{\mathbf{e}}_\phi &=& -\sin \phi ~ \hat{\mathbf{e}}_x + \cos \phi ~ \hat{\mathbf{e}}_y
+%\hat{\mathbf{e}}_q &\equiv& \frac{\frac{d \mathbf{x}}{d q}}{\left| \frac{d \mathbf{x}}{d q} \right|} \nonumber \\
+% &=& \frac{-3 \cos \theta \sin \theta }{\sqrt{1+3 \cos^2 \theta } } \cos \phi ~ \hat{\mathbf{e}}_x + \frac{-3 \cos \theta \sin \theta }{\sqrt{1+3 \cos^2 \theta } } \sin \phi ~ \hat{\mathbf{e}}_y + \frac{-2 \cos^2 \theta + \sin^2 \theta }{\sqrt{1+3 \cos^2 \theta } } ~ \hat{\mathbf{e}}_z \\
+%\hat{\mathbf{e}}_p &=& \hat{\mathbf{e}}_\phi \times \hat{\mathbf{e}}_q
 \end{eqnarray}
 
-In deriving the $\hat{\mathbf{e}}_q$ unit vector use was made of the fact that:
-\begin{equation}  
-\frac{d \mathbf{x}}{d q} = \frac{d}{d q} \left( r \sin \theta \cos \phi \hat{\mathbf{e}}_x + r \sin \theta \sin \phi \hat{\mathbf{e}}_y + r \cos \theta \hat{\mathbf{e}}_z \right)
-\end{equation}
-Dervitives needed to evaluate this unit vector are give by \citet{Schunk:2009}:  
-\begin{eqnarray}
-\frac{d r}{d q} &=& \frac{-2 r^3 \cos \theta}{R_e^2 \left( 1 + 3 \cos^2 \theta \right)}\\
-\frac{d \theta}{d q} &=& \frac{-r^2 \sin \theta}{R_e^2 \left( 1 + 3 \cos^2 \theta \right)} \\
-\frac{d \phi}{d q} &=& 0 \\
-\end{eqnarray}
+%In deriving the $\hat{\mathbf{e}}_q$ unit vector use was made of the fact that:
+%\begin{equation}  
+%\frac{d \mathbf{x}}{d q} = \frac{d}{d q} \left( r \sin \theta \cos \phi \hat{\mathbf{e}}_x + r \sin \theta \sin \phi \hat{\mathbf{e}}_y + r \cos \theta \hat{\mathbf{e}}_z \right)
+%\end{equation}
+%Dervitives needed to evaluate this unit vector are give by \citet{Schunk:2009}:  
+%\begin{eqnarray}
+%\frac{d r}{d q} &=& \frac{-2 r^3 \cos \theta}{R_e^2 \left( 1 + 3 \cos^2 \theta \right)}\\
+%\frac{d \theta}{d q} &=& \frac{-r^2 \sin \theta}{R_e^2 \left( 1 + 3 \cos^2 \theta \right)} \\
+%\frac{d \phi}{d q} &=& 0 \\
+%\end{eqnarray}
 
 The magnetic field is computed from dipole formulas in spherical coordinates, i.e.:  
 \begin{equation}
