fixed error in docs

--- a/doc/GEMINI.tex
+++ b/doc/GEMINI.tex
@@ -613,7 +613,7 @@ The contravariant basis vectors are, therefore, from Equation \ref{eqn:conbasis}
 
 The metric tensors corresponding to our dipole curvilinear space are related to differential displacements in the new coordinate system.  Based on the definition of the covariant unit vectors a differential displacement in a curvilinear system is:
 \begin{equation}
-d \mathbf{r} = d x^i \boldsymbol{\varepsilon}_i = dx \hat{\mathbf{e}}_x + dy \hat{\mathbf{e}}_y + dz \hat{\mathbf{e}}_z \label{eqn:dr}
+d \mathbf{r} = d x^i \boldsymbol{\varepsilon}_i \label{eqn:dr}
 \end{equation}
 Differential distance squared, is then:
 \begin{equation}
@@ -686,7 +686,7 @@ h_3 = h_\phi &=& r \sin \theta
 
 Finally, dipole unit vectors may be derived by noting equivalence of various expressions for $d \mathbf{r}$:
 \begin{equation}
-dr^2 = g_{ij} dx^i dx^j = dx^2 + dy^2+ dz^2
+dr^2 = g_{ij} dx^i dx^j
 \end{equation}
 In orthogonal coordinates this simplifies to:
 \begin{equation}
